# autoannotate-vision

./: .gitignore  MANIFEST.in  README.md  cluster_0_preview.html  cluster_1_preview.html  pyproject.toml  run_autoannotate_gui.py
.github/workflows/: publish.yml  tests.yml
docs/: api_reference.md  index.md  tutorials.md
examples/: advanced_usage.py  basic_usage.py
src/autoannotate/: __init__.py  config.py
src/autoannotate/core/: clustering.py  embeddings.py  organizer.py
src/autoannotate/ui/: cli.py  gui.py  html_preview.py  interactive.py
src/autoannotate/utils/: image_loader.py  validators.py
tests/: test_clustering.py  test_config.py  test_embeddings.py  test_html_preview.py  test_image_loader.py  test_integration.py  test_organizer.py  test_validators.py
