[build-system]
requires = ["setuptools>=80.9.0", "wheel>=0.45.1"]
build-backend = "setuptools.build_meta"

[project]
name = "autoannotate-vision"
version = "0.0.5"
description = "SOTA unsupervised auto-annotation SDK for image classification"
readme = "README.md"
requires-python = ">=3.10,<3.14"
license = { file = "LICENSE" }
authors = [
    { name = "MetaMind Innovations", email = "research@metamind-innovations.com" }
]
keywords = [
    "image-annotation",
    "clustering",
    "computer-vision",
    "auto-labeling",
    "machine-learning"
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Scientific/Engineering :: Image Recognition",
    "Topic :: Scientific/Engineering :: Image Processing",
]

dependencies = [
    "numpy>=2.0.0",
    "pillow>=9.0.0",
    "torch>=2.0.0",
    "torchvision>=0.15.0",
    "transformers>=4.30.0",
    "scikit-learn>=1.0.0",
    "umap-learn>=0.5.3",
    "click>=8.0.0",
    "tqdm>=4.65.0",
    "rich>=13.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "black>=23.0.0",
    "flake8>=6.0.0",
    "mypy>=1.0.0",
    "pre-commit>=3.0.0",
]
docs = [
    "mkdocs>=1.4.0",
    "mkdocs-material>=9.0.0",
    "mkdocstrings[python]>=0.20.0",
]
hdbscan = [
    "hdbscan>=0.8.29",
]

[project.scripts]
autoannotate-images-cli = "autoannotate.ui.cli:main"
autoannotate-images = "autoannotate.ui.gui:main"

[project.urls]
Homepage = "https://github.com/Metamind-Innovations/autoannotate-vision"
Documentation = "https://github.com/Metamind-Innovations/autoannotate-vision/blob/main/README.md"
Issues = "https://github.com/Metamind-Innovations/autoannotate-vision/issues"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
autoannotate = ["py.typed"]

[tool.black]
line-length = 100
target-version = ['py310', 'py311', 'py312', 'py313']
include = '\.pyi?$'

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "-v --cov=autoannotate --cov-report=term-missing"

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
ignore_missing_imports = true
no_implicit_optional = true